# music-platform-backend

./: .env  .gitignore  Cargo.toml
migrations/: 20260628031045_table.sql
src/: config.rs  dtos.rs  models.rs
