[package]
name = "music_platform_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
lazy_static = "1.4"
regex = "1.11.0"
chrono = { version = "0.4.26", features = ["serde"] }
sqlx = { version = "0.8.1", features = ["runtime-async-std", "postgres", "chrono", "uuid"] }
uuid = { version = "1.4.1", features = ["serde", "v4"] }
dotenv = "0.15.0"
tokio = { version = "1.39.3", features = ["full"] }
async-trait = "0.1.72"
tokio-util = "0.7.12"
tower = "0.5.0"
time = "0.3.20"
argon2 = "0.5.1"
jsonwebtoken = "9.2.0"
validator = { version = "0.16.1", features = ["derive"] }
tokio-tungstenite = "0.24.0"
symphonia = { version = "0.5.4", features = ["aac", "flac", "mp3", "wav", "ogg"] }